# simd-learn

./: .gitignore  CMakeLists.txt
src/: main.cpp  simd.cpp  simd.hpp
